--- a/src/css/style.css
+++ b/src/css/style.css
@@ -343,14 +343,24 @@ height: 1.7rem;
 .top-panel__user--menu img{
     width: 2rem;
     height: 3rem;
+    cursor: pointer;
 }
 
 .background__media > img{
     display: none;
 }
 
+.background__menu{
+    display: none;
+}
+
+.background__media{
+    display: none;
+}
+
 @media screen and (max-width:790px) {
     .background__menu{
+        display: flex;
         position: fixed;
         width: 100%;
         height: 100%;
@@ -397,10 +407,10 @@ height: 1.7rem;
         align-items: center;
     }
     .background__media{
-    content: "";
+    display: inline-block;
     background-color: white;
     width: 100%;
-    height: 9%;
+    height: 7.5rem;
     position: fixed;
     top: 0;
     z-index: 6;
@@ -410,18 +420,27 @@ height: 1.7rem;
     visibility: visible;
     }
 
-    /* .hidden{
+    .hidden{
         height: 0%;
         opacity: 0;
         visibility: hidden;
         transition: 0.4s all;
         width: 0%;
-    } */
+    }
 
     .top-panel__media > li{
         margin: 0 2rem !important;
     }
 
+    .top-panel__navigation button:hover + .top-panel__text{
+        top: -0.2rem;
+    }
+    .top-panel__navigation button:hover + .top-panel__text--comics{
+        top: 0rem;
+    }
+    .top-panel__navigation button:hover + .top-panel__text--game{
+        top: 0rem;
+    } 
 }
 
 
@@ -461,9 +480,10 @@ height: 1.7rem;
 h3.no__result{
     position: relative !important;
     margin-top: 4rem;
+    max-width: 55rem;
 }
 
-.header form{position: absolute;margin: 0 3rem;padding-top: 4rem;width: 100%;}
+.header form{position: absolute;margin: 0 3rem;padding-top: 4rem;width: 92%;}
 .header form input{
     width: 70%;
     font-size: 1.6rem;
@@ -590,6 +610,7 @@ h3.no__result{
     height: 0rem;
     overflow: auto;
     opacity: 0;
+    cursor: pointer;
     visibility: hidden;
     transition: 0.4s all;
 }
@@ -813,6 +834,11 @@ button.arrow-button img{
     
 }
 
+.backgroundVideo iframe{
+    width: 70rem;
+    height: 50rem;
+}
+
 .backgroundVideo .slider > div{
     scroll-snap-align: start;
     transition: 0.4s all;
@@ -857,6 +883,7 @@ h3.trailer{
     justify-content: space-around;
     margin-bottom: 2rem;
     margin-top: 5rem;
+    margin: 5rem auto 2rem auto;
     width: 90%;
 
 }
@@ -988,4 +1015,142 @@ ul.search__title span{
     border-radius: 0.5rem;
     color: white;
     font-weight: 500;
+}
+
+/* ======================REPSONSIVE================================ */
+@media screen and (max-width:1024px) {
+    .header__text h1{
+        font-size: 5rem;
+    }
+    .header__text h3{
+        font-size: 2rem;
+    }
+    .main__taskmovie--overview{
+        max-height: 22rem;
+        overflow-y: auto;
+    }
+
+    .main__taskmovie--overview::-webkit-scrollbar{
+        width: 0.5rem;
+    }
+
+    .main__taskmovie--overview::-webkit-scrollbar-thumb{
+        background: #DBDBDB;
+        border-radius: 1rem ;
+    }
+
+    .main__taskmovie--info h3{
+        font-size: 3.5rem;
+        height: 5rem;
+        max-height: 9rem;
+    }
+    .main__taskmovie{
+        padding-top: 6rem;
+    }
+}
+
+@media screen and (min-height: 1024px){
+    .main__taskmovie{
+        padding-top: 20rem;
+    }
+}
+
+@media screen and (min-height: 1336px){
+    .main__taskmovie{
+        padding-top: 30rem;
+    }
+}
+
+@media screen and (max-width: 415px){
+    .main__taskmovie--vote button{margin-left: 2rem;}
+    .main{
+        grid-template-columns: 1fr 1fr;
+    }
+    .header__text h1{
+        font-size: 3rem;
+    }
+    .header__text h3{
+        font-size: 1.5rem;
+    }
+    .main > h3{
+        top:-1%;
+    }
+    .header{
+        height: 30rem;
+    }
+    .header form input{
+        width: 85%;
+        font-size:1.2rem;
+        padding: 1.8rem 2rem;
+    }
+    .header form input.search{
+        right: 15%;
+        font-size: 1.2rem;
+        padding: 0.9rem 1rem;
+        width: 8rem;
+        top: 53%;
+    }
+    .main__taskmovie > img{
+        width: 90% !important;
+        margin-left: 1.1rem;
+        height: 40rem !important;
+    }
+
+    .banner{
+        height: 100%;
+        top: 0;
+        z-index: -1;
+    }
+    .main__taskmovie{
+        width: 92%;
+        margin-left: 2rem;
+        padding-top: 7rem;
+        display: block;
+    }
+    .main__taskmovie--info{
+        margin: 3rem 0rem 1rem 0rem;
+        width: 100%;
+    }
+    .top-panel{
+        margin: 0;
+        padding: 0 2rem;
+    }
+    .main__taskmovie--overview{
+        width: 38rem;
+        margin-right: 0;
+    }
+    .backgroundVideo iframe{
+        width: 100%;
+        height: 40rem;
+    }
+    .backgroundVideo .slider{
+        width: 100%;
+        height: 40rem;
+    }
+    .screen-short{
+        width: 100%;
+    }
+    h3.no__result{
+        margin-top: 7rem;
+        font-size:2rem;
+        min-width:23rem;
+    }
+
+    ul.search__title{
+        
+    }
+
+    ul.search__title > h3{
+        font-size: 1.5rem;
+        padding: 2rem 1rem;
+    }
+    ul.search__title li{
+        
+    }
+}
+
+@media screen and (max-width: 376px){
+    .main__taskmovie--overview{
+        width: 34rem;
+    }
 }
